# routes/api.php
@@ -18,6 +18,8 @@ use App\Http\Controllers\Personas;
 Route::group(['middleware' => ["auth:sanctum"]], function () {
     Route::get('/auth/candidatos', [AuthController::class, 'listadoCandidatosConDetalles']);
     Route::get('/auth/lista-candidatos-total-votos', [AuthController::class, 'listaCandidatosConTotalVotos']);
+    Route::post('/auth/ingresar-voto', [AuthController::class, 'ingresarVoto']);
+
 
 });
 
